fixed button spacing

--- a/style.css
+++ b/style.css
@@ -69,6 +69,11 @@ body {
     text-align: center;
     padding-bottom: 32px;
 }
+
+.buttons button {
+    margin: 8px 12px 8px 12px;
+}
+
  
 .quiz-button:hover {
     cursor: pointer;
